update: bash scripts | new: README.md

--- a/.env
+++ b/.env
@@ -52,16 +52,12 @@ KC_BOOTSTRAP_ADMIN_PASSWORD=bootpassword
 
 # * api
 PORT=7000
-SERVER_PORT=7000
-MONGO_APP_USER=app_user
-MONGO_APP_PASSWORD=AppPassword456
 KEYCLOAK_BASEURL=keycloak
-KEYCLOAK_REALM=autocrime
 MONGO_URI=mongodb://$MONGO_INITDB_ROOT_USERNAME:$MONGO_INITDB_ROOT_PASSWORD@mongo:27017/$MONGO_INITDB_DATABASE?authSource=admin
 KC_URL="http://keycloak:8080"
-KC_REALM="autocrime"
+KC_REALM="myrealm"
 KC_CLIENT_ID="express-auth-client"
-KC_CLIENT_SECRET="fTkTTZSPaY5yDpG9oV53zC31888xZMGh"
+KC_CLIENT_SECRET="O6MTZ881ZDy6xqkhBeWoRF8YoWIrc801"
 NODE_EXTRA_CA_CERTS=/usr/src/app/certs/rootCA.pem
 
 # CIP APP
