--- a/compose.api-dev.yml
+++ b/compose.api-dev.yml
@@ -5,14 +5,16 @@ services:
     user: "${UID:-1000}:${GID:-1000}"
     env_file:
       - .env
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.api.rule=Host(`$HOST`) && PathPrefix(`/api`)"
-      - "traefik.http.services.api.loadbalancer.server.port=$PORT"
-      - "traefik.http.routers.api.entrypoints=websecure"
-      - "traefik.http.middlewares.api-stripprefix.stripPrefix.prefixes=/api"
-      - "traefik.http.routers.api.middlewares=api-stripprefix"
-      - "traefik.http.routers.api.tls=true"
+    # expose:
+    #   - $PORT
+    # labels:
+    #   - "traefik.enable=true"
+    #   - "traefik.http.routers.api.rule=Host(`$HOST`) && PathPrefix(`/api`)"
+    #   - "traefik.http.services.api.loadbalancer.server.port=$PORT"
+    #   - "traefik.http.routers.api.entrypoints=websecure"
+    #   - "traefik.http.middlewares.api-stripprefix.stripPrefix.prefixes=/api"
+    #   - "traefik.http.routers.api.middlewares=api-stripprefix"
+    #   - "traefik.http.routers.api.tls=true"
     volumes:
       - /home/raftkon/projects/express-auth/backend/:/usr/src/app
       - /usr/src/app/node_modules
