--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -3,16 +3,13 @@ services:
     image: postgres:16
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    env_file:
-      - .env
     networks:
       - nextjs-keycloak
   keycloak:
     image: quay.io/keycloak/keycloak:26.0
-    volumes:
-      - ./init-keycloak:/tmp/init-keycloak:ro
-    env_file:
-      - .env
+    user: "${UID:-1000}:${GID:-1000}"
+    # volumes:
+    #   - ./init-keycloak:/tmp/init-keycloak:ro
     command: start
     restart: always
     depends_on:
@@ -27,8 +24,6 @@ services:
       - mongodb_data:/data/db
     expose:
       - "27027"
-    env_file:
-      - .env
     networks:
       - nextjs-keycloak
 volumes:
