commit before initial push

--- a/.env
+++ b/.env
@@ -53,13 +53,9 @@ KC_BOOTSTRAP_ADMIN_PASSWORD=bootpassword
 # * api
 PORT=7000
 KEYCLOAK_BASEURL=keycloak
-MONGO_URI=mongodb://$MONGO_INITDB_ROOT_USERNAME:$MONGO_INITDB_ROOT_PASSWORD@mongo:27017/$MONGO_INITDB_DATABASE?authSource=admin
+MONGO_URI=mongodb://$MONGO_INITDB_ROOT_USERNAME:$MONGO_INITDB_ROOT_PASSWORD@mongodb:27017/$MONGO_INITDB_DATABASE?authSource=admin
 KC_URL="http://keycloak:8080"
-KC_REALM="myrealm"
-KC_CLIENT_ID="express-auth-client"
-KC_CLIENT_SECRET="O6MTZ881ZDy6xqkhBeWoRF8YoWIrc801"
+KC_REALM="auth-tool"
+KC_CLIENT_ID="admin-app"
+KC_CLIENT_SECRET="4onyI68HdVm0nv7tcVZu7NzGjdzO9i0f"
 NODE_EXTRA_CA_CERTS=/usr/src/app/certs/rootCA.pem
-
-# CIP APP
-CIP_ADMIN_USER=cipadmin
-CIP_ADMIN_PASSWORD=cippassword
