cookies working for nextjs and expressjs

--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,6 @@ INITIALIZATION_VECTOR='1365d85eaee1155c609a1c226e78c8a9'
 # The tokens above are generated with the node:crypto module. Run crypto.randomBytes(64).toString('hex')
 
 
-#! provide the path to your files
-# USER_DATA_PATH=/home/raftkon/aegis/cip
 UID=1000
 GID=1000
 HOST=localhost
@@ -57,5 +55,5 @@ MONGO_URI=mongodb://$MONGO_INITDB_ROOT_USERNAME:$MONGO_INITDB_ROOT_PASSWORD@mong
 KC_URL="http://keycloak:8080"
 KC_REALM="auth-tool"
 KC_CLIENT_ID="admin-app"
-KC_CLIENT_SECRET="4onyI68HdVm0nv7tcVZu7NzGjdzO9i0f"
+KC_CLIENT_SECRET="a-super-client-secret"
 NODE_EXTRA_CA_CERTS=/usr/src/app/certs/rootCA.pem
